@@ -1,5 +1,8 @@
 Broker:
 - Fix crash on Windows if loading a plugin fails. Closes #1866.
+- Fix listener not being reassociated with client when reloading a persistence
+  file and `per_listener_settings true` is set and the client did not set a
+  username. Closes #1891.
 
 
 1.6.12 - 2020-08-19
